cm4all-beng-proxy (0.5.9) unstable; urgency=low

  * tcache: fixed typo in tcache_string_match()
  * tcache: support VARY=SESSION
  * translate: added the INVALIDATE response packet
  * cache, session: higher size limits

 --

cm4all-beng-proxy (0.5.8) unstable; urgency=low

  * handler: fixed double free bug in translate_callback()

 -- Max Kellermann <mk@cm4all.com>  Sun, 14 Jun 2009 19:05:09 +0200

cm4all-beng-proxy (0.5.7) unstable; urgency=low

  * forward the Content-Disposition header
  * handler: assign new session to local variable, fix segfault
  * handler: don't dereference the NULL session

 -- Max Kellermann <mk@cm4all.com>  Sun, 14 Jun 2009 13:01:52 +0200

cm4all-beng-proxy (0.5.6) unstable; urgency=low

  * widget-http: send the "Via" request header instead of "X-Forwarded-For"
  * proxy-handler: send the "Via" request header
  * widget-request: check the "path" argument before calling uri_compress()

 -- Max Kellermann <mk@cm4all.com>  Tue, 09 Jun 2009 12:21:00 +0200

cm4all-beng-proxy (0.5.5) unstable; urgency=low

  * processor: allow specifying relative URI in c:base=child
  * widget-request: verify the "path" argument
  * widget: allocate address from widget's pool
  * widget-http: support multiple Set-Cookie response headers

 -- Max Kellermann <mk@cm4all.com>  Thu, 04 Jun 2009 15:10:15 +0200

cm4all-beng-proxy (0.5.4) unstable; urgency=low

  * implemented delegation of open() to a helper program
  * added the BASE translation packet, supported by the translation cache
  * deprecated c:mode=proxy
  * rewrite-uri: always enable focus in mode=partial
  * http-cache: don't cache resources with query string (RFC 2616 13.9)
  * http-cache: lock cache items while they are served

 -- Max Kellermann <mk@cm4all.com>  Thu, 28 May 2009 11:44:01 +0200

cm4all-beng-proxy (0.5.3) unstable; urgency=low

  * cgi: close request body on fork() failure
  * fork: added workaround for pipe-to-pipe splice()