@@ -4,6 +4,7 @@ cm4all-beng-proxy (0.5.9) unstable; urgency=low
   * tcache: support VARY=SESSION
   * translate: added the INVALIDATE response packet
   * cache, session: higher size limits
+  * widget-uri: separate query_string from path_info
 
  --
 
